--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,33 @@ a:hover, a:focus {
 a img{
 	border: none 0px #fff;
 }
+
+a.skip-main {
+  left: -999px;
+  position: absolute;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  z-index: -999;
+}
+a.skip-main:focus,
+a.skip-main:active {
+  color: #fff;
+  background-color: #000;
+  left: auto;
+  top: auto;
+  width: 30%;
+  height: auto;
+  overflow: auto;
+  margin: 10px 35%;
+  padding: 5px;
+  border-radius: 15px;
+  border: 4px solid yellow;
+  text-align: center;
+  font-size: 1.2em;
+  z-index: 999;
+}
 h1, h2, h3, h4, h5, h6 {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0 0 20px;
@@ -51,6 +78,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 #maincontent {
     background-color: #f3f3f3;
     display: flex;
+    justify-content: center;
     flex-wrap: wrap
 }
 #footer {
@@ -155,12 +183,14 @@ font-size: 14pt;
 
 /* ====================== Restaurant Listing ====================== */
 #restaurants-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
     background-color: #f3f3f3;
     list-style: outside none none;
-    padding: 30px 15px 60px;
-    width: 1368px;
-    margin-left: auto;
-    margin-right: auto
+    width: 100%;
+    padding: 0px;
 }
 
 #restaurants-list li {
@@ -242,7 +272,7 @@ font-size: 14pt;
     font-size: 20pt;
     font-weight: 200;
     letter-spacing: 0;
-    margin: 15px 0 30px;
+    margin: 30px 0 30px;
     text-transform: uppercase;
     line-height: 1.1
 }
@@ -271,8 +301,13 @@ font-size: 14pt;
 
 #restaurant-container,
 #reviews-container {
-    padding: 10px 40px 30px;
-    width: 50%
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  align-content: center;
+  justify-content: center;
+    padding: 10px 0px 30px;
+    width: 100%;
 }
 
 #restaurant-container {
@@ -297,7 +332,10 @@ font-size: 14pt;
 
 #reviews-list {
     margin: 0;
-    padding: 0
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #reviews-list li {
@@ -347,6 +385,8 @@ font-size: 14pt;
     font-weight: 700
 }
 
+
+
 @media screen and (max-width: 1400px) {
     #restaurants-list {
         width: 100%
@@ -354,6 +394,13 @@ font-size: 14pt;
     #restaurants-list li {
         width: calc((100% - 15px) / 4)
     }
+}
+
+@media screen and (min-width: 997px) and (max-width: 1300px) {
+    #restaurant-name {
+        padding-top: 15%;
+    }
+
 }
 
 @media screen and (min-width: 996px) and (max-width: 1140px) {
@@ -379,8 +426,7 @@ font-size: 14pt;
         width: 75%
     }
     #maincontent {
-        display: flex;
-        flex-wrap: wrap
+
     }
     #restaurant-hours td {
         vertical-align: top
@@ -394,14 +440,26 @@ font-size: 14pt;
         width: 100% !important
     }
     #restaurant-container {
-        order: 0;
+        width: 100%;
+        align-items: center;
         height: inherit
+    }
+
+    #restaurant-container > div {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        height: inherit
+    }
+    #restaurant-hours{
+      width: 90%
     }
     #map-container {
     }
     #reviews-container {
         order: 2;
-        padding: 70px 25px 80px 20px;
+        padding: 70px 0px 80px 0px;
         text-align: center
     }
     #reviews-list li {
